# another-me

./: .env.example  AME_OPTIMIZATION_DELIVERY_REPORT.md  AME_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  AME_OPTIMIZATION_QUICKSTART.md  ARCHITECTURE_OPTIMIZATION_V0.2.0.md  DUAL_STORAGE_DESIGN.md  FRONTEND_DEPLOYMENT_CHECKLIST.md  FRONTEND_DEV_GUIDE.md  FRONTEND_OPTIMIZATION_COMPLETE.md  FRONTEND_OPTIMIZATION_FINAL_SUMMARY.md  FRONTEND_OPTIMIZATION_IMPLEMENTATION_PLAN.md  FRONTEND_OPTIMIZATION_PROGRESS.md  FRONTEND_README.md  FRONTEND_TASK_COMPLETION.md  IMPLEMENTATION_SUMMARY.md  REFACTORING_GUIDE.md  SYSTEM_DESIGN.md  init_mvp.py  pyproject.toml  test.py  test_file_module.py  test_file_module_direct.py  test_file_standalone.py  test_mvp.py
.qoder/quests/: architecture-optimization.md  architecture-simplification-and-modularization.md  feature-algorithm-enhancement.md  front-end-optimization-and-issues-fix.md  frontend-backend-collaboration.md  llmpipestreamopenaicachecompresspipesessionpipedoc-pipe.md  run-project.md  (+2 more)
ame/: CHANGELOG.md  DOCUMENTATION_INDEX.md  PHASE1_CLEANUP.md  PHASE1_COMPLETION_REPORT.md  PHASE1_PROGRESS.md  PHASE2_COMPLETION_SUMMARY.md  README.md  REFACTORING_GUIDE.md  REFACTORING_IMPLEMENTATION_SUMMARY.md  REFACTORING_PROGRESS_SUMMARY.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  __init__.py  cleanup_redundant_modules.sh  new_arch.md  pytest.ini  setup.py
ame-frontend/: package-lock.json  package.json
deployment/: docker-compose.yml
frontend/: Dockerfile  enpm-lock.yaml
scripts/: init_falkor_graph.py  migrate_vector_store.py
(+134 files in other folders)
